<resources>
    <string name="app_name">OpenMinds</string>
    <string name="title_login">Connexion</string>
    <string name="edit_text_mail">Email</string>
    <string name="login_identifier_hint">Email ou nom d\'utilisateur</string>
    <string name="psw_text_mail">Mot de passe</string>
    <string name="psw_forgot_text">Mot de passe oublie ?</string>
    <string name="show">afficher</string>
    <string name="no_account">Pas de compte ?</string>
    <string name="register">Inscription</string>
    <string name="register_title">Inscription</string>
    <string name="name_edit_text">Nom</string>
    <string name="organization_edit_text">Organisation</string>
    <string name="sign_up">S\'inscrire</string>
    <string name="terms_of_use">Conditions d\'utilisation</string>
    <string name="accept_processing_data">J\'accepte le traitement de mes donnees et les conditions d\'utilisation</string>
    <string name="sign_in">Se connecter</string>
    <string name="back">Retour</string>
    <string name="filter">Filtrer</string>
    <string name="content">Contenu</string>
    <string name="search">Rechercher</string>
    <string name="forget_password">Mot de passe oublie</string>
    <string name="validation_code">Code de validation</string>
    <string name="valider">Valider</string>
    <string name="we_have_send_you_a_validation_code_by_email_please_enter_hit">Un code de validation vous a ete envoye par email</string>
    <string name="reset_password">Reinitialiser le mot de passe</string>
    <string name="enter_new_password">Veuillez entrer un nouveau mot de passe</string>
    <string name="new_password">Nouveau mot de passe</string>
    <string name="settings">Parametres</string>
    <string name="logout">Deconnexion</string>
    <string name="profile">Profil</string>
    <string name="already_have_an_account">Deja un compte ?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_home">Bienvenue, %s</string>
    <string name="select_association">Choisir une association</string>
    <string name="discover_associations">Decouvrir des associations</string>
    <string name="scan_qr_code">Scanner un QR Code</string>
    <string name="donation_history">Historique des dons</string>
    <string name="recurring_donation">Don recurrent</string>
    <string name="make_donation">Faire un don</string>
    <string name="guest_donation">Don sans connexion</string>
    <string name="admin_dashboard">Tableau de bord admin</string>
    <string name="admin_welcome">Admin: %s</string>
    <string name="select_amount">Selectionnez un montant</string>
    <string name="custom_amount">Montant personnalise (€)</string>
    <string name="confirm_donation">Confirmer le don</string>
    <string name="your_email">Votre email</string>
    <string name="amount">Montant (€)</string>
    <string name="frequency">Frequence</string>
    <string name="monthly">Mensuel</string>
    <string name="annual">Annuel</string>
    <string name="start_date">Date de debut</string>
    <string name="select_date">Choisir une date</string>
    <string name="confirm_recurring">Confirmer le don recurrent</string>
    <string name="qr_instructions">Placez le QR Code de l\'association dans le cadre</string>
    <string name="stats_by_year">Statistiques par annee</string>
    <string name="recurring_stats">Dons recurents</string>
    <string name="recent_donations">Dons recents</string>
    <string name="show_recurring">Voir recurents</string>
    <string name="filter_by_category">Filtrer par categorie</string>
    <string name="filter_by_year">Filtrer par annee</string>
    <string name="association_logo">Logo de l\'association</string>
    <string name="profile_picture">Photo de profil</string>
    <string name="badges">Badges</string>
    <string name="cancel">Annuler</string>
    <string name="cancel_recurring_donation">Annuler ce don recurrent</string>
    <string name="nav_home">Accueil</string>
    <string name="nav_donate">Donner</string>
    <string name="nav_profile">Profil</string>
</resources>
