<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResetPassword"
    android:background="@color/white">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_marginTop="10sp"
        android:textColor="@color/purple"
        android:textStyle="bold"
        android:textSize="@dimen/default_text_size"
        android:layout_marginStart="7sp"
        android:onClick="back"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="@font/nunito"
        android:layout_marginTop="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/default_text_size"
        android:textColor="@color/black"
        android:layout_marginTop="25sp"
        android:gravity="center"
        android:text="@string/enter_new_password"/>

    <EditText
        android:id="@+id/validationCodeEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColorHint="@color/dark_gray"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:hint="@string/new_password"
        android:layout_marginEnd="25sp"
        android:layout_marginStart="25sp"
        android:layout_marginTop="25sp"
        android:background="@drawable/bg_arrondi"
        android:backgroundTint="@color/gray"
        android:padding="15sp"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_margin="25sp"
        android:background="@drawable/button"
        app:backgroundTint="@color/purple"
        android:text="@string/valider"
        android:onClick="valider"/>
</LinearLayout>