<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_marginTop="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:baselineAligned="false" android:padding="8sp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/purple"
            android:fontFamily="@font/nunito"
            android:textSize="@dimen/default_text_size"
            android:textStyle="bold"
            android:onClick="logOut"
            android:text="@string/back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/content"
            android:textStyle="bold"
            android:fontFamily="@font/nunito"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textViewFilter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/nunito"
            android:textStyle="bold"
            android:textColor="@color/purple"
            android:onClick="goToProfile"
            android:gravity="end"
            android:text="@string/filter"
            android:textSize="@dimen/default_text_size" />
    </LinearLayout>

    <EditText
        android:layout_marginTop="15sp"
        android:layout_marginEnd="10sp"
        android:textColorHint="@color/dark_gray"
        android:layout_marginStart="10sp"
        android:id="@+id/editTextText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15sp"
        android:backgroundTint="@color/gray"
        android:ems="10"
        android:inputType="text"
        android:background="@drawable/button"
        android:hint="@string/search"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/monRecyclerView"
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:layout_gravity="end"
        app:menu="@menu/menu_navigation"
        app:itemIconTint="@color/purple"
        app:labelVisibilityMode="unlabeled"
        app:itemIconSize="32dp"
        app:itemRippleColor="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    </LinearLayout>

</LinearLayout>